<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="change_record_title">어떤 하루로 변경할까요?</string>
    <string name="change_record">변경하기</string>

    <string name="test_title">테스트용 타이틀</string>
    <string name="test_body">테스트용 바디</string>
    <string name="exit_dialog">나가기</string>
    <string name="write_dialog">작성하기</string>
    <string name="daily_place_holder">나의 하루는 어땠나요?</string>
    <string name="add_photo_description">+사진 올리기></string>
    <string name="write_record_text">작성하기</string>
    <string name="detail_stat_title">세부 기록</string>
    <string name="exercise_record_title">운동 기록</string>
    <string name="record_delete_title">기록을 삭제하시겠습니까?</string>
    <string name="record_delete_body">삭제된 기록은 복구가 불가해요</string>
    <string name="record_delete_button_text">삭제하기</string>
    <string name="record_dismiss_button_text">유지하기</string>

    <string name="record_close_dialog_title">기록을 남기지 않고 나가시겠습니까?</string>
    <string name="record_close_dialog_body">작성 중인 기록은 저장되지 않아요.</string>
    <string name="record_close_detail_dialog_title">수정하지 않고 나가시겠습니까?</string>
    <string name="record_close_detail_dialog_body">변경된 내용은 저장되지 않아요.</string>

    <string name="modifiy_record_text">수정하기</string>

    <string name="daily_select_title" />
    <string name="exercise_select_title">운동 선택</string>
    <string name="habit_select_title">습관 선택</string>
    <string name="schedule_select_title" />

    <string name="today_records_over_title">오늘의 기록 2개가 모두 채워졌어요.</string>
    <string name="today_records_over_body">내일 다시 시도해 주세요.</string>

    <string name="nickname_hint">닉네임 혹은 이름을 입력해 주세요.</string>
    <string name="nickname_description">한글, 영문 최대 6글자 / 공백, 특수기호 입력 불가</string>

    <string name="logout_title">로그아웃 하시겠습니까?</string>
    <string name="logout_body">로그아웃 후에는 다시 로그인해야만\n서비스 이용이 가능해요.</string>
    <string name="logout_cancel">닫기</string>
    <string name="logout_confirm">로그아웃</string>

    <string name="withdrawal_title">탈퇴를 진행 하시겠습니까?</string>
    <string name="withdrawal_body">탈퇴 시 모든 정보가 삭제되며, 복구가 불가능합니다.</string>
    <string name="withdrawal_cancel">닫기</string>
    <string name="withdrawal_confirm">탈퇴하기</string>

    <string name="current_goal_banner_title">새 목표를 통해 다른\n하루를 시작해보세요</string>
    <string name="current_goal_banner_body">새 목표 설정하기</string>

    <string name="daily_title">하루 기록</string>
    <string name="daily_body">나의 찰나와 감정까지, 오늘을 기록해요.</string>
    <string name="exercise_title">운동 기록</string>
    <string name="exercise_body">운동 루틴과 목표, 나의 건강함을 기록해요.</string>
    <string name="schedule_title">일정 기록</string>
    <string name="schedule_body">해야 할 일과 중요한 순간을 놓치지 말아요.</string>
    <string name="habit_title">습관 기록</string>
    <string name="habit_body">작은 습관부터, 나의 변화를 기록해요.</string>

    <string name="goals_10_message">첫 걸음</string>
    <string name="goals_20_message">습관의 시작</string>
    <string name="goals_30_message">꾸준한 성장</string>
</resources>
