...
            Box(
                modifier = modifier
                    .padding(16.dp)
                    .fillMaxWidth()
            ) {
                Text(
                    "운동 재선택",
                    style = MaterialTheme.typography.titleSmall,
                    modifier = modifier.align(Alignment.Center)
                )
                Image(
                    modifier = Modifier
                        .align(Alignment.CenterEnd)
                        .padding(end = 16.dp)
                        .clickable { onDismiss() },
                    painter = painterResource(see.day.ui.R.drawable.ic_close),
                    contentDescription = "뒤로가기 버튼"
                )
            }
        }
    ) {
        LazyColumn(
            modifier = Modifier.padding(16.dp),
...
