...
                Image(
                    modifier = Modifier
                        .align(Alignment.CenterStart)
                        .size(24.dp)
                        .clickable { onClickCloseButton() },
                    painter = painterResource(R.drawable.ic_arrow_left),
                    contentDescription = "뒤로가기 버튼",
                )
            }
        }
        Text(
            text = recordType.title,
            modifier = Modifier.align(Alignment.Center),
...
                Image(
                    modifier = Modifier
                        .align(Alignment.CenterEnd)
                        .size(24.dp)
                        .clickable { onClickDeleteButton() },
                    painter = painterResource(R.drawable.ic_trash),
                    contentDescription = "삭제 버튼",
                )
            }
        }


    }
...
