...
            ) {
                Text(
                    "운동 기록",
                    style = MaterialTheme.typography.titleSmall,
                )
                Text(
                    "(1개 이상 필수 입력)",
                    style = MaterialTheme.typography.labelSmall.copy(color = gray50),
                    modifier = Modifier.padding(start = 6.dp)
                )
            }
            HealthStatInputField(
                modifier = Modifier.padding(top = 16.dp),
...
