<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="notification_title">알림</string>
    <string name="empty_history_description">새로운 알림이 없습니다.</string>
</resources>
