<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="select_daily_emotion">오늘의 감정을 선택해주세요</string>
    <string name="change_record_type">기록 방식을 바꿀래요</string>
    <string name="record_daily_place_holder">나의 하루는 어땠나요?</string>
    <string name="photo_limit_text">*최대 3장 가능</string>
</resources>
