...

@Composable
internal fun NotificationSwitch(
    modifier: Modifier = Modifier,
    @StringRes title: Int,
    @StringRes body: Int,
    checked: Boolean,
    isAllChecked: Boolean,
    onCheckedChanged: (Boolean) -> Unit
) {
    Row(
        modifier = Modifier.clickable { onCheckedChanged(!checked) }.then(modifier)
    ) {
...
